--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
 		      Here is the link to my <a href="./more_fav.html">second favicon</a> page.
 		    </p>
         <center><img src="./images/lanadelrey2.webp" width="200" length="100"></center>
+        <!-- List -->
+        <h5>My top 3 Lana Del Rey albums:</h5>
+        <ul class="demo-list-item mdl-list">
+          <li class="mdl-list__item">
+            <span class="mdl-list__item-primary-content">
+              Norman F****** Rockwell
+            </span>
+          </li>
+          <li class="mdl-list__item">
+            <span class="mdl-list__item-primary-content">
+              Lust for Life
+            </span>
+          </li>
+          <li class="mdl-list__item">
+            <span class="mdl-list__item-primary-content">
+              Ultraviolence
+            </span>
+          </li>
+        </ul>
 			</main>
 		</div>
   </body>
