--- a/more_fav.html
+++ b/more_fav.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Brayden MacMillan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- For the favicon on this page -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./fav_more/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./fav_more/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./fav_more/favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 		
 		<!-- To use Google's MDL -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
