finalyzed all my coding

--- a/more_fav.html
+++ b/more_fav.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-		
-		<!-- To use Google's MDL -->
+
+    <!-- To use Google's MDL -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-deep_orange.min.css" />
     <title>My Second Web Page, with a Favicon</title>
@@ -42,6 +42,42 @@
 		    <p>
 		      Here is the link to my <a href="./index.html">first favicon</a> page.
 		    </p>
+        
+        <!-- More Google MDL -->
+        <p>Here is a list of my favourite Lana Del Rey songs because I am obsessed with her:</p>
+        <ol>
+          <li>Cinnamon Girl</li>
+          <li>Love</li>
+          <li>Born to Die</li>
+        </ol>
+        <h2>Here is a table</h2> 
+        <p>This table is showcasing my 3 favourite Lana albums, featuring my favourite song off of the album, my least favourite song, and her most popular song off the album</p>
+        <table border="1">
+          <tr>
+            <th>Album name</th>
+            <th>Favourite song</th>
+            <th>Least favourite song</th>
+            <th>Most popular song!</th>
+          </tr>
+          <tr>
+            <td>Ultraviolence</td>
+            <td>Old Money</td>
+            <td>Guns and Roses</td>
+            <td>Brooklyn Baby or West Coast</td>
+          </tr>
+          <tr>
+            <td>Norman F****** Rockwell</td>
+            <td>Cinnamon Girl</td>
+            <td>F*** it I love you</td>
+            <td>Doin' Time</td>
+          </tr>
+          <tr>
+            <td>Lust for Life</td>
+            <td>Love</td>
+            <td>Summer Bummer</td>
+            <td>Cherry</td>
+          </tr>
+        </table>
 			</main>
 		</div>
   </body>
